trying to fix background image load on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,10 @@
      height: 100%;
      position: fixed;
      background-image: url("../images/background-image.jpg");
-     background-position: center;
-     background-size: 100% cover;
+     background-position: center center;
+     background-size: cover;
      background-repeat: no-repeat;
+     width: 100%;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
 
@@ -236,22 +237,9 @@
          display: flex;
      }
  }
-
- /* @media only screen and (max-width: 480px) {
+/* 
+ @media (max-width: 480px) {
      body {
-         background-image: url("../images/background-image-phone.jpg");
-         background-repeat:  no-repeat;
-         /* background-size: cover; */
+         background-size: 100%;
      }
-
-     h1 { 
-        text-align: left;
-     }
-
-     .links a:hover {
-        width: 50%;
-    }
-    .links a {
-        display: flex;
-    }
  } */
